[#3098] feat(event-handling): ProcessorEventHandlingComponent - rewrite ProcessorEventHandlingComponentsTest